# numerai-tools

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test-and-deploy.yml
numerai_tools/: __init__.py  data.py  indexing.py  math.py  scoring.py  signals.py  submissions.py  typing.py
tests/: __init__.py  test_data.py  test_dependencies.py  test_indexing.py  test_math.py  test_scoring.py  test_signals.py  test_submissions.py  util.py
